--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,34 @@
 sudo: required
 os:
-  - linux
+- linux
 services:
-  - docker
+- docker
 language: scala
 scala:
-  - 2.12.4
+- 2.12.4
 jdk:
-  - oraclejdk9
+- oraclejdk9
 cache:
   directories:
-    - $HOME/.m2/repository
-    - $HOME/.sbt
-    - $HOME/.ivy2
+  - "$HOME/.m2/repository"
+  - "$HOME/.sbt"
+  - "$HOME/.ivy2"
 branches:
   only:
-    - master
-    - travis-credentials
+  - master
+  - travis-credentials
 notifications:
   email:
     recipients:
-      - liska.jakub@gmail.com
+    - liska.jakub@gmail.com
 before_install:
-  - docker pull gwiq/fake-s3
+- openssl aes-256-cbc -K $encrypted_9b605b7adec4_key -iv $encrypted_9b605b7adec4_iv
+  -in gce-key.json.enc -out gce-key.json -d
+- docker pull gwiq/fake-s3
 before_script:
-  - rm -rf ${HOME}/.sbt/1.0/staging
+- rm -rf ${HOME}/.sbt/1.0/staging
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION clean test
+- sbt ++$TRAVIS_SCALA_VERSION clean test
+env:
+- GOOGLE_APPLICATION_CREDENTIALS=${HOME}/gce-key.json
+
