Set default aws region.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,5 @@ script:
 - sbt ++$TRAVIS_SCALA_VERSION clean test
 env:
 - GOOGLE_APPLICATION_CREDENTIALS=${TRAVIS_BUILD_DIR}/gce-key.json
+- AWS_REGION=eu-west-1
 
