--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ before_script:
 script:
 - sbt ++$TRAVIS_SCALA_VERSION clean test
 env:
-- GOOGLE_APPLICATION_CREDENTIALS=${TRAVIS_BUILD_DIR}/gce-key.json
-- AWS_REGION=eu-west-1
+  global:
+    - GOOGLE_APPLICATION_CREDENTIALS=${TRAVIS_BUILD_DIR}/gce-key.json
+    - AWS_REGION=eu-west-1
 
