--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 sudo: required
 os:
-- linux
+  - linux
 services:
-- docker
+  - docker
 language: scala
 scala:
-- 2.12.4
+  - 2.12.6
 jdk:
-- oraclejdk9
+  - anapsix/alpine-java:8u144b01_jdk_unlimited
 cache:
   directories:
   - "$HOME/.m2/repository"
@@ -21,13 +21,13 @@ notifications:
     recipients:
     - liska.jakub@gmail.com
 before_install:
-- openssl aes-256-cbc -K $encrypted_9b605b7adec4_key -iv $encrypted_9b605b7adec4_iv
-  -in gce-key.json.enc -out gce-key.json -d
-- docker pull gwiq/fake-s3
+  - openssl aes-256-cbc -K $encrypted_9b605b7adec4_key -iv $encrypted_9b605b7adec4_iv
+    -in gce-key.json.enc -out gce-key.json -d
+  - docker pull gwiq/fake-s3
 before_script:
-- rm -rf ${HOME}/.sbt/1.0/staging
+  - rm -rf ${HOME}/.sbt/1.0/staging
 script:
-- sbt ++$TRAVIS_SCALA_VERSION clean test
+  - sbt ++$TRAVIS_SCALA_VERSION clean test
 env:
   global:
     - GOOGLE_APPLICATION_CREDENTIALS=${TRAVIS_BUILD_DIR}/gce-key.json
