in order to run dind

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,6 +19,9 @@ pipeline:
 
   run-tests:
     image: gwiq/sbt-docker:latest
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /root/.docker:/root/.docker
     commands:
       - sbt -mem 1024 -Djline.terminal=off -Dcoursier.cache=./.coursier -Dsbt.ivy.home=./.ivy2 -Dfile.encoding=utf-8 -Dsbt.gigahorse=false test
     secrets:
