--- a/.drone.yml
+++ b/.drone.yml
@@ -18,7 +18,7 @@ pipeline:
       event: [push, deployment, tag]
 
   run-tests:
-    image: gwiq/sbt-docker:latest
+    image: gwiq/sbt-docker:1.2.5
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /root/.docker:/root/.docker
@@ -37,7 +37,7 @@ pipeline:
       event: push
 
   publish-maven-artifacts:
-    image: gwiq/sbt-docker:latest
+    image: gwiq/sbt-docker:1.2.5
     commands:
       - sbt -mem 1024 -Djline.terminal=off -Dcoursier.cache=./.coursier -Dsbt.ivy.home=./.ivy2 -Dfile.encoding=utf-8 publish
     secrets:
