--- a/.drone.yml
+++ b/.drone.yml
@@ -17,6 +17,16 @@ pipeline:
     when:
       event: [push, deployment, tag]
 
+  services:
+  - name: fakes3
+    image: gwiq/fake-s3
+    ports:
+      - 4567
+    commands:
+      - -r /fakes3_root -p 4567
+    when:
+      event: push
+
   run-tests:
     image: gwiq/sbt-docker:1.2.5
     volumes:
