cleaning up drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -27,22 +27,9 @@ pipeline:
 
   run-tests:
     image: gwiq/sbt-docker:latest
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /root/.docker:/root/.docker
     commands:
       - sbt -mem 1024 -Djline.terminal=off -Dcoursier.cache=./.coursier -Dsbt.ivy.home=./.ivy2 -Dfile.encoding=utf-8 -Dsbt.gigahorse=false test
-    environment:
-      - COURSIER_TTL=30d
-    secrets:
-    - source: staging_gcs_credentials
-      target: google_application_credentials
-    - source: aws_access_key_id
-      target: aws_access_key_id
-    - source: aws_secret_access_key
-      target: aws_secret_access_key
-    - source: aws_region
-      target: aws_region
+    secrets: [ google_application_credentials, aws_access_key_id, aws_secret_access_key, aws_region ]
     when:
       event: push
 
@@ -50,19 +37,7 @@ pipeline:
     image: gwiq/sbt-docker:latest
     commands:
       - sbt -mem 1024 -Djline.terminal=off -Dcoursier.cache=./.coursier -Dsbt.ivy.home=./.ivy2 -Dfile.encoding=utf-8 publish
-    environment:
-      - COURSIER_TTL=30d
-    secrets:
-      - source: bintray_user
-        target: bintray_user
-      - source: bintray_pass
-        target: bintray_pass
-      - source: aws_access_key_id
-        target: aws_access_key_id
-      - source: aws_secret_access_key
-        target: aws_secret_access_key
-      - source: aws_region
-        target: aws_region
+    secrets: [ bintray_user, bintray_pass, aws_access_key_id, aws_secret_access_key, aws_region ]
     when:
       event: [deployment, tag]
 
@@ -76,3 +51,4 @@ pipeline:
       - /tmp/cache:/cache
     when:
       event: [push, deployment, tag]
+      status: [ failure, success ]
